@@ -6,7 +6,8 @@ include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
 include /usr/share/dpkg/default.mk
 
-binaries := $(shell dh_listpackages)
+built_binaries := $(shell dh_listpackages)
+all_binaries := $(shell sed -ne 's/^Package: *//p' < debian/control)
 
 # Ensure the build aborts when there are still references to undefined symbols
 # currently fails at least in the im-multipress im module
@@ -114,7 +115,7 @@ else
 configure_flags_deb += --disable-wayland-backend
 endif
 
-ifeq ($(filter %-doc,$(binaries)),)
+ifeq ($(filter %-doc,$(built_binaries)),)
 configure_flags_deb += --disable-gtk-doc --disable-man
 endif
 
@@ -136,7 +137,7 @@ configure_flags_udeb = \
 override_dh_clean: debian/control
 	# gross kludge to force control generation with the %.in target
 	touch debian/control.in
-	rm -f $(call dh_subst_files,$(binaries))
+	rm -f $(call dh_subst_files,$(all_binaries))
 	rm -rf debian/build debian/install
 	# The build system does not automatically update the GResource files
 	# when resources change. Force an update in case we ship a patch which
@@ -145,7 +146,7 @@ override_dh_clean: debian/control
 	dh_clean
 
 # Add dependencies to generate files from the debian/*.in ones
-override_dh_auto_build: $(call dh_subst_files,$(binaries))
+override_dh_auto_build: $(call dh_subst_files,$(all_binaries))
 
 override_dh_autoreconf:
 	NOCONFIGURE=true dh_autoreconf ./autogen.sh
@@ -157,7 +158,7 @@ override_dh_auto_configure: debian/control
 		$(configure_flags_common) \
 		$(configure_flags_deb) \
 		$(NULL)
-ifneq ($(filter %-udeb,$(binaries)),)
+ifneq ($(filter %-udeb,$(built_binaries)),)
 	dh_auto_configure \
 		--builddirectory=debian/build/udeb \
 		-- \
@@ -168,7 +169,7 @@ endif
 
 override_dh_auto_build:
 	dh_auto_build --builddirectory=debian/build/deb
-ifneq ($(filter %-udeb,$(binaries)),)
+ifneq ($(filter %-udeb,$(built_binaries)),)
 	dh_auto_build --builddirectory=debian/build/udeb
 endif
 
@@ -185,7 +186,7 @@ endif
 override_dh_auto_install:
 	dh_auto_install --builddirectory=debian/build/deb --destdir=debian/install/deb
 	rm -v -f debian/install/deb/usr/libexec/installed-tests/gtk+/reftests/libreftest.la
-ifneq ($(filter %-udeb,$(binaries)),)
+ifneq ($(filter %-udeb,$(built_binaries)),)
 	dh_auto_install --builddirectory=debian/build/udeb --destdir=debian/install/udeb
 endif
 
