@@ -2,6 +2,11 @@ gtk+3.0 (3.24.1-2) UNRELEASED; urgency=medium
 
   * d/libgtk-3-0.symbols: Mark gdk_wayland_window_announce_ssd() as
     Linux-specific, since we do not enable Wayland on non-Linux
+  * d/rules: Generate files from .in counterparts for every package,
+    not just the ones we are going to build. This avoids dh_missing
+    false positives for files that would have gone into packages not
+    included in the current build, for example libgtk-3-common during
+    an amd64-only build.
 
  -- Simon McVittie <smcv@debian.org>  Sun, 30 Sep 2018 14:50:10 +0100
 
